<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="373dp" />

    <Button
        android:id="@+id/color_dialog_cancel_button"
        android:layout_width="146dp"
        android:layout_height="97dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/app_name"
        android:text="@string/all_lights_off_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="36dp"
        android:text="@string/all_lights_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="164dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/seekbar_container"
        android:layout_width="91dp"
        android:layout_height="639dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
            android:id="@+id/verticalSeekBarWrapper20"
            android:layout_width="90dp"
            android:layout_height="511dp"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                android:id="@+id/channel20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:max="100"
                android:progress="50"
                app:seekBarRotation="CW270" />
        </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>

        <Button
            android:id="@+id/button3"
            android:layout_width="71dp"
            android:layout_height="63dp"
            android:layout_marginBottom="12dp"
            android:text="@string/up"
            app:layout_constraintBottom_toTopOf="@+id/verticalSeekBarWrapper20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="77dp"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:text="@string/down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




